Refactor: Stabilize FoodIQ platform with deterministic OCR, restored light-themed UI, and calibrated nutritional seed data for provided menus.